# face-analysis-sdk

./: CMakeLists.txt  build.sh  environment.yml  environment_old.yml
src/expression-transfer/: CMakeLists.txt
src/face-fit/: CMakeLists.txt
src/python/: CMakeLists.txt  face_analysis_binding.cpp  ndarray_converter.cpp  ndarray_converter.h  test.py
